[package]
name = "intel8080"
version = "0.10.0"
edition = "2018"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
description = "Yet another Intel 8080 Emulator."
keywords = ["emulation", "emulator", "Intel", "8080", "CPU"]
categories = ["emulators"]
license = "MIT"
repository = "https://github.com/nicolasbauw/Intel8080"
readme = "README.md"
exclude = ["/bin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
